--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
         }
         let baseDeDados = [];
         let musicaSelecionada = "";
-        const urlAPI = 'https://script.google.com/macros/s/AKfycbxnF_B8YxsDtWY8kia67X-7iaozMYPk7yWTukIDbYOQ4pzLaXZ5acY9fFJ14IXgQcpDyg/exehttps://script.google.com/macros/s/AKfycbxnF_B8YxsDtWY8kia67X-7iaozMYPk7yWTukIDbYOQ4pzLaXZ5acY9fFJ14IXgQcpDyg/exec';
+        const urlAPI = 'https://script.google.com/macros/s/AKfycbxV-CyPJekEE-dVzNTalWbG6JX0s7-XOxy9Aa_wSLCzQd4yib0EsE8nSfr6DY7iEHMjxw/exec';
         let deferredPrompt;
 
         // PWA Service Worker
