--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="manifest" href="manifest.json">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Karaokê - Pedir Música</title>
@@ -44,10 +45,9 @@
             border: 1px solid rgba(255, 255, 255, 0.2);
             background: rgba(255, 255, 255, 0.1);
             color: white;
-            box-sizing: border-box;
             font-size: 16px;
-            outline: none;
             margin-bottom: 15px;
+            outline: none;
         }
 
         button {
@@ -79,19 +79,6 @@
             font-size: 20px;
         }
 
-        #modal-lista {
-            display: none;
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background: var(--bg);
-            z-index: 100;
-            overflow-y: auto;
-            padding: 20px;
-        }
-
         .musica-badge {
             background: linear-gradient(45deg, #24243e, var(--accent));
             padding: 15px;
@@ -103,10 +90,7 @@
         #custom-alert {
             display: none;
             position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
+            inset: 0;
             background: rgba(0, 0, 0, 0.8);
             z-index: 200;
             justify-content: center;
@@ -120,19 +104,29 @@
             border: 2px solid var(--primary);
             text-align: center;
             max-width: 350px;
+            width: 90%;
         }
 
         .alert-title {
             color: var(--primary);
             font-size: 22px;
-            margin-bottom: 10px;
             font-weight: bold;
+            margin-bottom: 10px;
+        }
+
+        #last-update {
+            text-align: center;
+            color: #ccc;
+            font-size: 14px;
+            margin-top: 25px;
+            opacity: 0.85;
         }
     </style>
 </head>
 
 <body>
 
+    <!-- ALERTA -->
     <div id="custom-alert">
         <div class="alert-box">
             <div class="alert-title" id="alert-title">ATENÇÃO</div>
@@ -143,17 +137,21 @@
 
     <div class="container">
 
-        <h1 style="text-align:center;">KARAOKÊ EQUIPE 360 RJ</h1>
+        <h1 style="text-align:center; letter-spacing:2px;">
+            KARAOKÊ <br>EQUIPE 360 RJ
+        </h1>
 
+        <!-- BUSCA -->
         <div id="sessao-busca">
             <label>Pesquise sua música:</label>
-            <input type="text" id="inputBusca" placeholder="Artista ou música..." oninput="filtrar()">
-
+            <input type="text" id="inputBusca" placeholder="Artista ou nome da música..." oninput="filtrar()">
             <div id="listaResultados"></div>
         </div>
 
+        <!-- CONFIRMAÇÃO -->
         <div id="sessao-confirmacao" style="display:none;">
             <button onclick="voltar()">← Mudar Música</button>
+
             <h3>Confirmar Pedido</h3>
             <div class="musica-badge" id="displayMusica"></div>
 
@@ -163,19 +161,24 @@
             <button id="btnEnviar" onclick="finalizarPedido()">ENVIAR PEDIDO</button>
         </div>
 
+        <!-- FEEDBACK -->
         <div id="feedback" style="display:none; text-align:center;">
-            <h2>✅ Pedido enviado!</h2>
+            <h2 style="color:#00ff88;">✅ Pedido enviado!</h2>
             <p>Boa sorte 🎤</p>
         </div>
+
+        <!-- ÚLTIMA ATUALIZAÇÃO -->
+        <p id="last-update"></p>
 
     </div>
 
     <script>
         let baseDeDados = [];
         let musicaSelecionada = "";
+
         const urlAPI = "https://script.google.com/macros/s/AKfycbxRisuHRWj7Yb1JGuvHyFvazt971nvPsaix2789RGeLVCQDUp5tCAJLvAbOr3JcpZae/exec";
 
-        fetch("dados.json")
+        fetch("dados.json?v=" + Date.now())
             .then(r => r.json())
             .then(d => baseDeDados = d.sort());
 
@@ -218,7 +221,6 @@
             customAlert.style.display = "none";
         }
 
-        // ✅ FUNÇÃO CORRIGIDA
         async function finalizarPedido() {
             const nome = nomeCantor.value;
             if (!nome) return mostrarAlerta("ATENÇÃO", "Digite seu nome!");
@@ -238,7 +240,6 @@
 
                 sessaoConfirmacao.style.display = "none";
                 feedback.style.display = "block";
-
                 setTimeout(() => location.reload(), 3000);
 
             } catch (e) {
@@ -247,6 +248,25 @@
                 btnEnviar.innerText = "ENVIAR PEDIDO";
             }
         }
+
+        /* 🔹 ÚLTIMA ATUALIZAÇÃO AUTOMÁTICA */
+        (function mostrarUltimoUpdate() {
+            const data = new Date(document.lastModified);
+
+            const dataFormatada = data.toLocaleDateString('pt-BR', {
+                day: '2-digit',
+                month: '2-digit',
+                year: 'numeric'
+            });
+
+            const horaFormatada = data.toLocaleTimeString('pt-BR', {
+                hour: '2-digit',
+                minute: '2-digit'
+            });
+
+            document.getElementById('last-update').innerText =
+                `Última atualização: ${dataFormatada} às ${horaFormatada}`;
+        })();
     </script>
 
 </body>
