--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <link rel="manifest" href="manifest.json">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
-
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Karaokê - Pedir Música</title>
@@ -45,9 +44,10 @@
             border: 1px solid rgba(255, 255, 255, 0.2);
             background: rgba(255, 255, 255, 0.1);
             color: white;
+            box-sizing: border-box;
             font-size: 16px;
-            margin-bottom: 15px;
             outline: none;
+            margin-bottom: 15px;
         }
 
         button {
@@ -61,6 +61,12 @@
             font-size: 18px;
             cursor: pointer;
             margin-top: 10px;
+        }
+
+        #btn-install {
+            display: none;
+            background: linear-gradient(45deg, #00b09b, #96c93d);
+            margin-top: 20px;
         }
 
         .resultado-item {
@@ -79,6 +85,20 @@
             font-size: 20px;
         }
 
+        #modal-lista {
+            display: none;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: var(--bg);
+            z-index: 100;
+            overflow-y: auto;
+            padding: 20px;
+            box-sizing: border-box;
+        }
+
         .musica-badge {
             background: linear-gradient(45deg, #24243e, var(--accent));
             padding: 15px;
@@ -87,10 +107,17 @@
             border-left: 4px solid var(--primary);
         }
 
+        #sessao-confirmacao {
+            display: none;
+        }
+
         #custom-alert {
             display: none;
             position: fixed;
-            inset: 0;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
             background: rgba(0, 0, 0, 0.8);
             z-index: 200;
             justify-content: center;
@@ -103,171 +130,98 @@
             border-radius: 15px;
             border: 2px solid var(--primary);
             text-align: center;
-            max-width: 350px;
-            width: 90%;
-        }
-
-        .alert-title {
-            color: var(--primary);
-            font-size: 22px;
-            font-weight: bold;
-            margin-bottom: 10px;
-        }
-
-        #last-update {
-            text-align: center;
-            color: #ccc;
-            font-size: 14px;
-            margin-top: 25px;
-            opacity: 0.85;
+            max-width: 85%;
+            width: 350px;
         }
     </style>
 </head>
 
 <body>
 
-    <!-- ALERTA -->
-    <div id="custom-alert">
-        <div class="alert-box">
-            <div class="alert-title" id="alert-title">ATENÇÃO</div>
-            <div id="alert-msg"></div>
-            <button onclick="fecharAlerta()">OK</button>
-        </div>
+<div class="container">
+    <h1 style="text-align:center;">KARAOKÊ EQUIPE 360 RJ</h1>
+
+    <div id="sessao-busca">
+        <label>Pesquise sua música:</label>
+        <input type="text" id="inputBusca" oninput="filtrar()">
+        <div id="listaResultados"></div>
     </div>
 
-    <div class="container">
-
-        <h1 style="text-align:center; letter-spacing:2px;">
-            KARAOKÊ <br>EQUIPE 360 RJ
-        </h1>
-
-        <!-- BUSCA -->
-        <div id="sessao-busca">
-            <label>Pesquise sua música:</label>
-            <input type="text" id="inputBusca" placeholder="Artista ou nome da música..." oninput="filtrar()">
-            <div id="listaResultados"></div>
-        </div>
-
-        <!-- CONFIRMAÇÃO -->
-        <div id="sessao-confirmacao" style="display:none;">
-            <button onclick="voltar()">← Mudar Música</button>
-
-            <h3>Confirmar Pedido</h3>
-            <div class="musica-badge" id="displayMusica"></div>
-
-            <label>Seu nome:</label>
-            <input type="text" id="nomeCantor" placeholder="Quem vai cantar?">
-
-            <button id="btnEnviar" onclick="finalizarPedido()">ENVIAR PEDIDO</button>
-        </div>
-
-        <!-- FEEDBACK -->
-        <div id="feedback" style="display:none; text-align:center;">
-            <h2 style="color:#00ff88;">✅ Pedido enviado!</h2>
-            <p>Boa sorte 🎤</p>
-        </div>
-
-        <!-- ÚLTIMA ATUALIZAÇÃO -->
-        <p id="last-update"></p>
-
+    <div id="sessao-confirmacao">
+        <h3>Confirmar Pedido</h3>
+        <div class="musica-badge" id="displayMusica"></div>
+        <label>Seu Nome:</label>
+        <input type="text" id="nomeCantor">
+        <button id="btnEnviar" onclick="finalizarPedido()">ENVIAR PEDIDO</button>
     </div>
 
-    <script>
-        let baseDeDados = [];
-        let musicaSelecionada = "";
+    <div id="feedback" style="display:none; text-align:center;">
+        <h2>✅ SUCESSO!</h2>
+        <p>Pedido enviado.</p>
+    </div>
 
-        const urlAPI = "https://script.google.com/macros/s/AKfycbxRisuHRWj7Yb1JGuvHyFvazt971nvPsaix2789RGeLVCQDUp5tCAJLvAbOr3JcpZae/exec";
+    <!-- ÚLTIMA ATUALIZAÇÃO -->
+    <p id="last-update" style="text-align:center; color:#ccc; font-size:14px; margin-top:30px;"></p>
+</div>
 
-        fetch("dados.json?v=" + Date.now())
-            .then(r => r.json())
-            .then(d => baseDeDados = d.sort());
+<script>
+    let baseDeDados = [];
+    let musicaSelecionada = "";
+    const urlAPI = 'https://script.google.com/macros/s/AKfycbxRisuHRWj7Yb1JGuvHyFvazt971nvPsaix2789RGeLVCQDUp5tCAJLvAbOr3JcpZae/exec';
 
-        function filtrar() {
-            const termo = inputBusca.value.toLowerCase();
-            listaResultados.innerHTML = "";
-            if (termo.length < 2) return;
+    fetch('dados.json?v=' + Date.now())
+        .then(r => r.json())
+        .then(d => baseDeDados = d.sort());
 
-            baseDeDados
-                .filter(m => m.toLowerCase().includes(termo))
-                .slice(0, 15)
-                .forEach(m => {
-                    const div = document.createElement("div");
-                    div.className = "resultado-item";
-                    div.innerHTML = `<span>${m}</span><span class="seta">➜</span>`;
-                    div.onclick = () => prepararEnvio(m);
-                    listaResultados.appendChild(div);
-                });
-        }
+    function filtrar() {
+        const termo = inputBusca.value.toLowerCase();
+        listaResultados.innerHTML = '';
+        if (termo.length < 2) return;
 
-        function prepararEnvio(m) {
-            musicaSelecionada = m;
-            displayMusica.innerText = m;
-            sessaoBusca.style.display = "none";
-            sessaoConfirmacao.style.display = "block";
-        }
-
-        function voltar() {
-            sessaoBusca.style.display = "block";
-            sessaoConfirmacao.style.display = "none";
-        }
-
-        function mostrarAlerta(t, m) {
-            alertTitle.innerText = t;
-            alertMsg.innerText = m;
-            customAlert.style.display = "flex";
-        }
-
-        function fecharAlerta() {
-            customAlert.style.display = "none";
-        }
-
-        async function finalizarPedido() {
-            const nome = nomeCantor.value;
-            if (!nome) return mostrarAlerta("ATENÇÃO", "Digite seu nome!");
-
-            btnEnviar.disabled = true;
-            btnEnviar.innerText = "ENVIANDO...";
-
-            try {
-                const formData = new FormData();
-                formData.append("musica", musicaSelecionada);
-                formData.append("cantor", nome);
-
-                await fetch(urlAPI, {
-                    method: "POST",
-                    body: formData
-                });
-
-                sessaoConfirmacao.style.display = "none";
-                feedback.style.display = "block";
-                setTimeout(() => location.reload(), 3000);
-
-            } catch (e) {
-                mostrarAlerta("ERRO", "Não foi possível enviar o pedido.");
-                btnEnviar.disabled = false;
-                btnEnviar.innerText = "ENVIAR PEDIDO";
-            }
-        }
-
-        /* 🔹 ÚLTIMA ATUALIZAÇÃO AUTOMÁTICA */
-        (function mostrarUltimoUpdate() {
-            const data = new Date(document.lastModified);
-
-            const dataFormatada = data.toLocaleDateString('pt-BR', {
-                day: '2-digit',
-                month: '2-digit',
-                year: 'numeric'
+        baseDeDados.filter(m => m.toLowerCase().includes(termo)).slice(0, 15)
+            .forEach(m => {
+                const div = document.createElement('div');
+                div.className = 'resultado-item';
+                div.innerHTML = `<span>${m}</span><span class="seta">➔</span>`;
+                div.onclick = () => prepararEnvio(m);
+                listaResultados.appendChild(div);
             });
+    }
 
-            const horaFormatada = data.toLocaleTimeString('pt-BR', {
-                hour: '2-digit',
-                minute: '2-digit'
-            });
+    function prepararEnvio(m) {
+        musicaSelecionada = m;
+        displayMusica.innerText = m;
+        sessaoBusca = document.getElementById('sessao-busca');
+        sessaoBusca.style.display = 'none';
+        sessaoConfirmacao.style.display = 'block';
+    }
 
-            document.getElementById('last-update').innerText =
-                `Última atualização: ${dataFormatada} às ${horaFormatada}`;
-        })();
-    </script>
+    async function finalizarPedido() {
+        const nome = nomeCantor.value;
+        if (!nome) return alert("Digite seu nome");
+
+        const formData = new FormData();
+        formData.append('musica', musicaSelecionada);
+        formData.append('cantor', nome);
+
+        await fetch(urlAPI, {
+            method: 'POST',
+            body: formData
+        });
+
+        sessaoConfirmacao.style.display = 'none';
+        feedback.style.display = 'block';
+    }
+
+    // Última atualização automática
+    (function () {
+        const d = new Date(document.lastModified);
+        lastUpdate = d.toLocaleDateString('pt-BR') + " às " +
+            d.toLocaleTimeString('pt-BR', { hour: '2-digit', minute: '2-digit' });
+        document.getElementById('last-update').innerText =
+            "Última atualização: " + lastUpdate;
+    })();
+</script>
 
 </body>
 </html>
